--- a/public/base.html
+++ b/public/base.html
@@ -17,6 +17,7 @@
 </head>
 <body class="bg">
 <div id="app">React App is Missing.</div>
+JAVASCRIPT
 <script src="bin/app.bundle.js" charset="utf-8"></script>
 </body>
 </html>
