--- a/public/base.html
+++ b/public/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .bg {
+            background-color: #000;
             background-image: url("bin/bg.jpg");
             height: 100%;
             background-position: center;
