--- a/public/base.html
+++ b/public/base.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .bg {
-            background-color: #000;
-            background-image: url("bin/bg.jpg");
+            background-image: url("bin/bg1.jpg");
             height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            width: 100%;
+            background-size: cover;
         }
     </style>
 </head>
