--- a/public/base.html
+++ b/public/base.html
@@ -13,6 +13,7 @@
             background-size: cover;
         }
     </style>
+    <script src="https://use.fontawesome.com/a33ba1edc4.js"></script>
 </head>
 <body class="bg">
 <div id="app">React App is Missing.</div>
