--- a/public/base.html
+++ b/public/base.html
@@ -13,7 +13,7 @@
             background-size: cover;
         }
     </style>
-    <script src="https://use.fontawesome.com/a33ba1edc4.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body class="bg">
 <div id="app">React App is Missing.</div>
